src/scss/_custom.scss
.active {
    text-decoration-line: underline;
}

.no-overflow {
    overflow: hidden;
}

.bg-image {
    z-index: -1;
    min-width: 100%;
    object-fit: cover;
    object-position: center top;
}

nav {
    &.navbar {
        position: absolute;
        top: 0;
        right: 0;
        width: 100%;
        align-items: flex-start;
    }

    .nav-item {
        font-size: 1.5rem;
        font-weight: 600;
        text-align: right;
    }
}

.clickable {
    $color: map-get($map: $theme-colors, $key: "primary");
    
    cursor: pointer;

    &:hover {
        color: darken($color: $color, $amount: 10%)
    }
}

.badge-pill {
    border-radius: 0.25rem;
}

#footer {
    background-color: map-get($map: $theme-colors, $key: "light");
    position: absolute;
    left: 0;
    bottom: -3rem;
}

html {
    position: relative;
    min-height: 100%;
}

